<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [<!ENTITY app_name "AutoQue">]>
<resources>

    <string name="faf_autofill_service_label">&app_name; Autofill Service</string>

    <string name="faf_popup_text">To enable autofill, select \"<b>&app_name; Autofill Service</b>\"</string>

    <string name="faf_auth_failure">Authentication error</string>

    <string name="faf_default_client_app_name">My app</string>

    <string name="faf_fill_canceled">Autofill canceled</string>
    <string name="faf_fill_failure">Unable to autofill</string>
    <string name="faf_fill_failure_auth">Unable to autofill: authentication error</string>

    <string name="faf_dataset_title_auth">Autofill with <b>&app_name;</b></string>
    <string name="faf_dataset_title_no_datasets">Credentials not found. Sign in to this app and we will save your credentials for future use.</string>
    <string name="faf_dataset_title_no_exact_datasets">No suitable credentials found, but you can try these</string>

    <string name="faf_save_description">Your credentials could be saved to a new account for future autofill</string>
    <string name="faf_save_success">Your account has been saved to \"&app_name;\"</string>
    <string name="faf_save_failure">Unable to save the account</string>
    <string name="faf_save_failure_auth">Unable to save the account: authentication error</string>

    <string name="faf_update_prompt_title">Save the new password?</string>
    <string name="faf_update_prompt_description">The password for your account has changed. Save the new password so you don\'t have to enter it manually next time.</string>
    <string name="faf_update_prompt_btn_yes">Save</string>
    <string name="faf_update_prompt_btn_no">Nope</string>

    <string name="faf_disclaimer_title">Unknown app source</string>
    <string name="faf_disclaimer_description">This app was installed from an unknown source, which can\'t be fully trusted. Do you want to allow access to your credentials?</string>
    <string name="faf_disclaimer_btn_yes">Allow</string>
    <string name="faf_disclaimer_btn_no">Cancel</string>

    <string name="faf_view_all_item">Show all</string>
    <string name="faf_view_all_title">All entities</string>
    <string name="faf_view_all_search">Search</string>
    <string name="faf_view_all_relevant">Most relevant</string>
    <string name="faf_view_all_other">Other</string>
    <string name="faf_view_all_nothing_found_title">Nothing was found :(</string>
    <string name="faf_view_all_nothing_found_descr">Although you can create the one you need</string>

</resources>
