<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingLeft="40dp"
    android:paddingEnd="40dp"
    android:paddingRight="40dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightest_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/faf_update_prompt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/faf_update_prompt_title"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faf_update_prompt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/faf_update_prompt_description"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/faf_update_prompt_btn_no"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:background="@color/primary"
                android:text="@string/faf_update_prompt_btn_no"
                android:textColor="@color/text_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/faf_update_prompt_btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@color/primary"
                android:text="@string/faf_update_prompt_btn_yes"
                android:textColor="@color/text_light"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>