<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/faf_view_all_bottom_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faf_top_rounded_white_rectangle"
    android:clipToPadding="false"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/faf_view_all_draggable"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/faf_rounded_gray_rectangle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/faf_view_all_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="14dp"
            android:text="@string/faf_view_all_title"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/faf_view_all_close"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:src="@drawable/faf_ic_arrow_back"
            android:visibility="invisible" />

    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/faf_view_all_app_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/faf_view_all_search_bar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <EditText
                    android:id="@+id/faf_view_all_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/faf_rounded_very_light_gray_rectangle"
                    android:hint="@string/faf_view_all_search"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:scrollHorizontally="true" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/faf_ic_search" />

                <ImageView
                    android:id="@+id/faf_view_all_search_clear"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="end|center_vertical"
                    android:padding="16dp"
                    android:src="@drawable/faf_ic_close"
                    android:visibility="invisible" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/faf_view_all_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/faf_view_all_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/faf_view_all_nothing_found_title"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/faf_view_all_empty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/faf_dataset_title_no_datasets"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/faf_view_all_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>